ADD : slug in books and authors
